syntax = "proto3";

package category;

option go_package = "category/genproto;genproto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service ETLService {
  rpc Start(ETLRequest) returns (ETLResponse) {
    option (google.api.http) = {
      post: "/etl/start"
      body: "*"
    };
  }

  rpc Stop(ETLRequest) returns (ETLResponse) {
    option (google.api.http) = {
      post: "/etl/stop"
      body: "*"
    };
  }

  rpc Status(ETLRequest) returns (ETLResponse) {
    option (google.api.http) = {
      get: "/etl/status"
    };
  }

  rpc GetValidProducts(ETLRequest) returns (FullProductListResponse) {
    option (google.api.http) = {
      get: "/etl/products"
    };
  }
}

message ETLRequest {
  reserved 1, 2;
}

message ETLResponse {
  string code = 1;
  string message = 2;
  map<string, string> fields = 3;
}

message FullProductListResponse {
  repeated FullProduct results = 1;
  PaginationInfo pagination_info = 2;
}

message FullProduct {
  string uuid = 1;
  ProductMain product_main = 2;
  CityMain city = 3;
  PriceMain price = 4;
  StockMain stock = 5;
}

message ProductMain {
  string uuid = 1;
  string created_at = 2;
  string updated_at = 3;
  bool deleted = 4;
  string id = 5;
  string name = 6;
  string description = 7;
  string category_id = 8;
  CategoryMain category = 9;
}

message PriceMain {
  string product_id = 1;
  string city_id = 2;
  double price = 3;
}

message CityMain {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
  bool deleted = 3;
  string id = 4;
  string name = 5;
  string postcode = 6;
}

message StockMain {
  string product_id = 1;
  string city_id = 2;
  int64 value = 3;
}

message CategoryMain {
  string created_at = 1;
  string updated_at = 2;
  bool deleted = 3;
  string id = 4;
  string name = 5;
}

message PaginationInfo {
  int64 page = 1;
  int64 page_size = 2;
}
